# axion-viewer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY_GUIDE.md  Dockerfile  EXEMPLO_MARKDOWN_PROFISSIONAL.md  EXEMPLO_RELATORIO.md  EXEMPLO_RELATORIO_COMPLETO.md  GITHUB_ACTIONS_SETUP.md  MARKDOWN_GUIDE.md  PROMPT_AGENTE_PREPROCESSAMENTO.md  QUICK_START_DOCKER.md  README.md  app.py  build-and-push.sh  config.py  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  test-local.sh
attached_assets/: Markdown - Análise Processo - 5001410-19.2016.4.04.7010 - 02-11-2025 (1)_1762345694760.txt  Pasted--RELAT-RIO-DE-PROCESSO-DE-D-VIDA-ATIVA-5001410-19-2016-4-04-7010-Processo-Principal-n-5001-1762431922735_1762431922736.txt  Pasted--RELAT-RIO-DE-PROCESSO-DE-D-VIDA-ATIVA-5003452-08-2016-4-04-7118-1-INFORMA-ES-DO-T-TULO-E-1762258109445_1762258109445.txt  Pasted--RELAT-RIO-DE-PROCESSO-DE-D-VIDA-ATIVA-Processo-Principal-n-5001410-19-2016-4-04-7010--1762349456525_1762349456526.txt  Pasted--errorMessage-The-service-was-not-able-to-process-your-request-errorDescription-st-1762216028252_1762216028253.txt  Pasted-Com-certeza-Entendido-Substitu-os-emojis-por-cones-mais-profissionais-alinhados-com-a-identidad-1762355573298_1762355573298.txt  Pasted-Ol-Marcos-Aqui-est-o-as-principais-vari-veis-CSS-e-estilos-que-controlam-cores-gradientes-e-espes-1762366735879_1762366735880.txt  Pasted-PLANO-COMPLETO-API-Flask-para-Markdown-HTML-com-Templates-Configur-veis-1-ARQUITETURA-DO-PR-1762194522032_1762194522032.txt  Pasted-PROCESSO-22-a-Tabela-de-Identifica-o-Data-ajuizamento-N-Processo-Tipo-de-A-o-Tribunal-1762195288902_1762195288903.txt  Pasted-PROMPT-PARA-CONVERS-O-DE-RELAT-RIO-1-OBJETIVO-GERAL-Sua-tarefa-atuar-como-Editor-Chefe--1762203386776_1762203386777.txt  relatorio_20251105_130513.html  (+3 more)
tests/: conftest.py  (+2 more)
(+129 files in other folders)
